deploy/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mery
  labels:
    name: mery
    environment: production
